--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -39,6 +39,8 @@ footer {
     height: 60px;
     background-color: #f5f5f5;
     width: 100%;
+    padding: 15px;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -62,4 +64,20 @@ footer {
 .container {
     padding: 65px;
     padding-bottom: 70px;
+}
+
+.user-login{
+    min-width: 200px;
+}
+.user-details{
+    padding: 10px 10px 0 10px;
+}
+.user-details strong{
+    font-size: 12px;
+}
+.user-details hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 0;
+    margin-right: 0;
 }
