--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -106,7 +106,7 @@ footer {
 }
 
 input[readonly].enabled {
-    background-color: transparent;
+    background-color: rgba(245, 245, 245, 0.5);
 }
 
 .CVSummary{
