Protocol creation in GUI: More improvements

--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -140,6 +140,11 @@ input[readonly].enabled {
     margin-bottom: 7px;
 }
 
+.CRUDProtocol-buttons-controler{
+    margin-top: 13px;
+    margin-bottom: 7px;
+}
+
 .modal-content{
     height: 70%;
     overflow-y: scroll;
