--- a/UI/src/css/Table.css
+++ b/UI/src/css/Table.css
@@ -1,18 +1,18 @@
-.panel-heading{
+.card-heading{
     height: 40px;
     justify-content: center;
     align-items: center;
     position:relative;
 }
 
-.panel-title {
+.card-title {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 16px;
     color: inherit;
 }
 
-.panel-content{
+.card-content{
     cursor: pointer;
     margin: 0;
 }
