--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -257,3 +257,8 @@ fieldset[disabled] .btn-default.active {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.navbar-dropdown-width
+{
+    min-width: 200px;
+}
