--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -183,8 +183,12 @@ input[readonly].enabled {
 }
 
 .btn-xxs {
-    font-size: 12px;
-    line-height: 1;
+    font-size: 0.75rem !important;
+    line-height: 1 !important;
+}
+
+.card-header{
+    height: 42px;
 }
 
 
@@ -261,4 +265,88 @@ fieldset[disabled] .btn-default.active {
 .navbar-dropdown-width
 {
     min-width: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.form-control2 {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  .form-control2 {
+    transition: none;
+  }
+}
+
+.form-control2::-ms-expand {
+  background-color: transparent;
+  border: 0;
+}
+
+.form-control2:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.form-control2::-webkit-input-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.form-control2::-moz-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.form-control2:-ms-input-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.form-control2::-ms-input-placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.form-control2::placeholder {
+  color: #6c757d;
+  opacity: 1;
+}
+
+.form-control2:disabled, .form-control2[readonly] {
+  background-color: #e9ecef;
+  opacity: 1;
+}
+
+select.form-control2:focus::-ms-value {
+  color: #495057;
+  background-color: #fff;
 }
