Fixing some issues originated by the type creation in the clinical variables0

--- a/UI/src/css/Select.css
+++ b/UI/src/css/Select.css
@@ -33,3 +33,52 @@
 .Selectx3{
     z-index: 300;
 }
+
+
+.Selectx4{
+    z-index: 400;
+}
+
+.Selectx5{
+    z-index: 500;
+}
+
+.Selectx6{
+    z-index: 600;
+}
+
+.Selectx7{
+    z-index: 700;
+}
+
+.Selectx8{
+    z-index: 800;
+}
+
+.Selectx9{
+    z-index: 900;
+}
+
+.Selectx10{
+    z-index: 1000;
+}
+
+.Selectx11{
+    z-index: 1100;
+}
+
+.Selectx12{
+    z-index: 1200;
+}
+
+.Selectx13{
+    z-index: 1300;
+}
+
+.Selectx14{
+    z-index: 1400;
+}
+
+.Selectx15{
+    z-index: 1500;
+}
