Update in some scripts due to issues in the deployment

--- a/UI/src/css/imports.css
+++ b/UI/src/css/imports.css
@@ -6,7 +6,7 @@
 @import url("Table.css");
 @import url("Texts.css");
 @import url("Select.css");
-@import url("externalLibsConfigs.css");
+@import url("externalImportsConfigs.css");
 
 /*
  * External libs
