Changing the home page to have the login component in the center

--- a/UI/src/css/app.css
+++ b/UI/src/css/app.css
@@ -66,6 +66,20 @@
      height: 100%;
 }
 
+.full-page-image::after {
+    content: "";
+    background-image: url('../../public/images/home_wallpaper.jpg');
+    background-size: cover;
+    overflow: hidden;
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
+
 footer {
     position: fixed;
     bottom: 0;
